# BrokerBridge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.docker-infra.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: brokerbridge-core.mdc  docs-plans.mdc  python-fastapi.mdc  wave-changelog-commits.mdc
app/: __init__.py  main.py
app/api/: openapi.py  router.py
app/auth/: deps.py  jwt.py
app/broker/: service.py
app/config/: service.py  settings.py
app/core/: __init__.py  crypto.py  errors.py  exception_handlers.py  health_checks.py  logging.py  middleware.py  redis_deps.py
app/db/: __init__.py  seed.py  session.py
docs/: ARCHITECTURE.md  DEMO.md  FEATURES.md  LOCAL_SETUP.md  README.md
local/: PRD.md  TDD.md  brokerbridge_operations_platform.html
migrations/: env.py
scripts/: w2_compose_e2e.sh  w3_compose_e2e.sh  w4_compose_e2e.sh  w5_compose_e2e.sh  w6_compose_e2e_database.sh  w6_compose_e2e_docker.sh
tests/: conftest.py  helpers.py  test_auth.py  test_brokers.py  test_dashboard_redis.py  test_db_models.py  test_errors.py  test_event_consumer.py  test_event_provider_reload.py  test_events.py  test_failover.py  test_health.py  test_health_scoring.py  test_infra_protocol.py  test_ip_manager.py  test_locks.py  test_mock_infra_database.py  test_mock_infra_docker.py  test_openapi_w2.py  test_openapi_w3.py  test_openapi_w4.py  test_openapi_w5.py  test_orders.py  test_outbox.py  test_providers.py  test_rate_limits.py  test_regions.py  test_rotation.py  test_routing.py  test_sessions.py  test_sim_faults.py  test_subscription_expiry.py  test_vultr_provider.py  test_whitelist.py  test_ws_events.py
(+105 files in other folders)
