[tool.poetry]
name = "brokerbridge"
version = "0.1.0"
description = "Broker Network Gateway & Static IP Orchestrator"
authors = ["BrokerBridge"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.32.0" }
pydantic-settings = ">=2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.51"}
asyncpg = "^0.31.0"
alembic = "^1.18.5"
pyjwt = "^2.13.0"
cryptography = "^49.0.0"
aiosqlite = "^0.22.1"
greenlet = "^3.5.4"
python-multipart = "^0.0.32"
email-validator = "^2.3.0"
bcrypt = "^5.0.0"
redis = "^5.0.0"
aiokafka = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
greenlet = "^3.5.4"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
